stress-cpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-cpu
  labels:
    app: stress-cpu
spec:
  containers:
  - name: stress-cpu
    image: polinux/stress
    args: ["-c", "1"]
    resources:
      requests:
        cpu: "200m"
        memory: "100Mi"
      limits:
        cpu: "500m"
        memory: "200Mi"
